Fix modal z-index

--- a/src/css/components/_Modal.css
+++ b/src/css/components/_Modal.css
@@ -22,3 +22,7 @@
     display: table;
   }
 }
+
+.ReactModal__Overlay {
+  z-index: 100;
+}
